--- a/Learner_Notebook.ipynb
+++ b/Learner_Notebook.ipynb
@@ -1,4 +1,151 @@
-/th>\n",
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://rhyme.com/assets/img/logo-dark.png\" align=\"center\"> <h2 align=\"center\">Logistic Regression: A Sentiment Analysis Case Study</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- IMDB movie reviews dataset\n",
+    "- http://ai.stanford.edu/~amaas/data/sentiment\n",
+    "- Contains 25000 positive and 25000 negative reviews\n",
+    "<img src=\"https://i.imgur.com/lQNnqgi.png\" align=\"center\">\n",
+    "- Contains at most reviews per movie\n",
+    "- At least 7 stars out of 10 $\\rightarrow$ positive (label = 1)\n",
+    "- At most 4 stars out of 10 $\\rightarrow$ negative (label = 0)\n",
+    "- 50/50 train/test split\n",
+    "- Evaluation accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Features: bag of 1-grams with TF-IDF values</b>:\n",
+    "- Extremely sparse feature matrix - close to 97% are zeros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " <b>Model: Logistic regression</b>\n",
+    "- $p(y = 1|x) = \\sigma(w^{T}x)$\n",
+    "- Linear classification model\n",
+    "- Can handle sparse data\n",
+    "- Fast to train\n",
+    "- Weights can be interpreted\n",
+    "<img src=\"https://i.imgur.com/VieM41f.png\" align=\"center\" width=500 height=500>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 1: Loading the dataset\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>In 1974, the teenager Martha Moxley (Maggie Gr...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>OK... so... I really like Kris Kristofferson a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>***SPOILER*** Do not read this, if you think a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hi for all the people who have seen this wonde...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I recently bought the DVD, forgetting just how...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Leave it to Braik to put on a good show. Final...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Nathan Detroit (Frank Sinatra) is the manager ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>To understand \"Crash Course\" in the right cont...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>I've been impressed with Chavez's stance again...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
